Wed Mar 20 12:35:22 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_grab_default): Remove
	leftover notification of has-default. (#75508, Jacob
	Berkman.)

Wed Mar 20 12:27:07 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccelgroup.c (gtk_accelerator_valid): Allow
	arrow keys as accelerators, as long as some modifier
	is pressed. (#75495)

	* gtk/gtkaccelgroup.c (gtk_accelerator_valid): Fix
	incorrect example in the docs.

Wed Mar 20 12:06:30 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_set_child_visible):
	Fix segfault when widget->parent is NULL. 
	(#75615, Alexey A. Malyshev) 

Wed Mar 20 11:32:07 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c: Improve test to prevent infinite
	loop. (#74952, Thomas Leonard)

	* gtk/gtkmenushell.c (gtk_real_menu_shell_cycle_focus):
	Fix warning when toplevel menu shell isn't a menu
	bar. (Thomas Leonard, #75602)

Wed Mar 20 11:00:59 2002  Owen Taylor  <otaylor@redhat.com>

        * configure.in: Use $PKG_CONFIG, not pkg-config.
        (LEE Sau Dan, #75572)

Wed Mar 20 10:55:56 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Fix assignment
	of time in scroll events. (Sven Neumann, #75574)

2002-03-20  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkdnd-win32.c (gdk_drag_find_window): Use
	gdk_window_get_toplevel(), as it is the top-level windows that are
	registered for DND.

	* gdk/win32/gdkwin32.h: Don't include gdkinternals.h.

2002-03-19  jacob berkman  <jacob@ximian.com>

	* gtk/gtkcombo.c (gtk_combo_find): fix infinite loop when
	gtk_combo_func() returns NULL (bug #75464)

2002-03-18  jacob berkman  <jacob@ximian.com>

	* gtk/gtkaspectframe.c (gtk_aspect_frame_class_init): set the
	correct min/max values for the ratio property (fixes #75331)

Mon Mar 18 11:55:03 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimmulticontext.c (gtk_im_multicontext_get_slave):
	Patch from Yao Zhang fixing reference count leak.
