@@ -457,7 +457,7 @@ accel_map_parse_statement (GScanner *scanner)
     {
       guint (*parser_func) (GScanner*);
 
-      parser_func = scanner->value.v_symbol;
+      parser_func = (guint (*) (GScanner *))scanner->value.v_symbol;
 
       expected_token = parser_func (scanner);
     }
@@ -512,7 +512,8 @@ gtk_accel_map_load_scanner (GScanner *scanner)
   symbol_2_token = scanner->config->symbol_2_token;
   scanner->config->symbol_2_token = FALSE;
   saved_symbol = g_scanner_lookup_symbol (scanner, "gtk_accel_path");
-  g_scanner_scope_add_symbol (scanner, 0, "gtk_accel_path", accel_map_parse_accel_path);
+  g_scanner_scope_add_symbol (scanner, 0, "gtk_accel_path", 
+			      (gpointer) accel_map_parse_accel_path);
 
   /* outer parsing loop
    */
