@@ -1585,7 +1585,7 @@ gtk_entry_focus_out (GtkWidget     *widget,
   gtk_entry_check_cursor_blink (entry);
   
   g_signal_handlers_disconnect_by_func (gdk_keymap_get_default (),
-                                        gtk_entry_keymap_direction_changed,
+                                        (gpointer) gtk_entry_keymap_direction_changed,
                                         entry);
   
   return FALSE;
