@@ -6070,7 +6070,7 @@ gtk_widget_class_install_style_property_parser (GtkWidgetClass     *class,
 
   g_param_spec_ref (pspec);
   g_param_spec_sink (pspec);
-  g_param_spec_set_qdata (pspec, quark_property_parser, parser);
+  g_param_spec_set_qdata (pspec, quark_property_parser, (gpointer) parser);
   g_param_spec_pool_insert (style_property_spec_pool, pspec, G_OBJECT_CLASS_TYPE (class));
 }
 
@@ -6124,7 +6124,7 @@ gtk_widget_style_get_property (GtkWidget   *widget,
       peek_value = _gtk_style_peek_property_value (widget->style,
 						   G_OBJECT_TYPE (widget),
 						   pspec,
-						   g_param_spec_get_qdata (pspec, quark_property_parser));
+						   (GtkRcPropertyParser) g_param_spec_get_qdata (pspec, quark_property_parser));
       
       /* auto-conversion of the caller's value type
        */
@@ -6187,7 +6187,7 @@ gtk_widget_style_get_valist (GtkWidget   *widget,
       peek_value = _gtk_style_peek_property_value (widget->style,
 						   G_OBJECT_TYPE (widget),
 						   pspec,
-						   g_param_spec_get_qdata (pspec, quark_property_parser));
+						   (GtkRcPropertyParser) g_param_spec_get_qdata (pspec, quark_property_parser));
       G_VALUE_LCOPY (peek_value, var_args, 0, &error);
       if (error)
 	{
